# piano-synth

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_SUCCESS.md  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_modular.txt  CODEBASE_OVERVIEW.md  LICENSE  MODULAR_ARCHITECTURE.md  README.md  SOUND_QUALITY_IMPROVEMENTS.md  SUCCESS_SUMMARY.md  build_and_test.sh  build_and_test_improved.sh  debug_string.cpp  debug_string_output.cpp  debug_synth.cpp  debug_synthesizer.cpp  demo_abstraction.cpp  demo_simple.cpp  demo_tune.cpp  simple_string_test.cpp  test_basic.cpp  test_piano_sound.cpp  working_string_replacement.cpp
app/: application.cpp  application.h  cli_arguments.cpp  cli_arguments.h  cli_interface.cpp  main.cpp
config/: abstraction.json  core.json  input.json  output.json  piano_config.json  piano_config.json.in
config/instruments/: piano.json
core/: main.cpp  piano_synth.cpp  piano_synth.h
core/abstraction/: abstraction_processor.cpp  event_processor.cpp  input_abstractor.cpp  input_abstractor.h  note_event.h  timing_processor.cpp  velocity_processor.cpp
core/audio/: audio_output_manager.cpp  audio_output_manager.h  recording_manager.cpp  recording_manager.h
core/engine/: audio_mixer.cpp  config_manager.cpp  core_engine.cpp  dll_manager.cpp
core/input/: device_identifier.cpp  device_identifier.h  device_manager.cpp  input_processor.cpp  midi_detector.cpp  midi_detector.h  midi_input_manager.cpp  midi_input_manager.h
core/output/: alsa_output.cpp  bare_metal_output.cpp  output_processor.cpp  portaudio_output.cpp  recording_manager.cpp
core/physics/: hammer_model.cpp  hammer_model.h  resonance_model.cpp  resonance_model.h  string_model.cpp  string_model.h  wave_equation_solver.cpp  wave_equation_solver.h
core/synthesis/: piano_synthesizer.cpp  piano_synthesizer.cpp.backup  piano_synthesizer.h  simple_oscillator.cpp  simple_oscillator.h
core/utils/: config_manager.cpp  config_manager.h  constants.h  logger.cpp  logger.h  math_utils.cpp  math_utils.h  note_params_manager.cpp  note_params_manager.h  note_settings_cli.cpp  note_settings_cli.h  wav_writer.cpp  wav_writer.h
include/: Abstractor.h  MidiDevice.h  MidiInput.h  NoteSynth.h  OutputHandler.h
instruments/piano/: hammer_model.cpp  piano_synthesizer.cpp  resonance_model.cpp  simple_oscillator.cpp  simple_oscillator.h  string_model.cpp  wave_equation_solver.cpp
shared/interfaces/: common_types.h  dll_interfaces.h
shared/utils/: audio_utils.cpp  audio_utils.h  json_config.cpp  json_config.h  logger.cpp  logger.h  math_utils.cpp
src/: Abstractor.cpp  MidiDevice.cpp  MidiInput.cpp  NoteSynth.cpp  OutputHandler.cpp  main.cpp
tests/: CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_modular.txt  test_abstraction_layer.cpp  test_cli_arguments.cpp  test_common_types.cpp  test_config_manager.cpp  test_hammer_model.cpp  test_helpers.cpp  test_helpers.h  test_integration.cpp  test_math_utils.cpp  test_midi_detector.cpp  test_modular_abstraction.cpp  test_modular_instrument.cpp  test_modular_integration.cpp  test_note_events.cpp  test_note_params_manager.cpp  test_note_settings_cli.cpp  test_piano_synthesizer.cpp  test_resonance_model.cpp  test_simple_oscillator.cpp  test_string_model.cpp  test_synth.cpp  test_synthesis_integration.cpp  test_wav_writer.cpp  test_wave_equation.cpp
tests/data/: test_config.json
tests/midi/: test_midi_device.cpp
tests/unit/: test_abstractor.cpp  test_midi_input.cpp
tools/: CMakeLists.txt  audio_latency_test.cpp  midi_tester.cpp  string_analyzer.cpp
